# zs-yaml

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/team/: addresses.yaml  custom_transformations.py  hobbies.yaml  skills.yaml  team.zs  team1.yaml  test_all_conversions.py  test_pyobj_to_yaml.py  work_experience.yaml
zs_yaml/: __init__.py  _version.py  built_in_transformations.py  convert.py  main.py  transformation.py  yaml_transformer.py
